# marchinghex

./: .gitignore  .gitmodules  CAD1.mesh  CMakeLists.txt  README.md  build.sh  different_configurations.mesh  intersections.cpp  intersections.h  main.cpp  marchingcube.cpp  marchingcube.h  smoother.cpp  smoother.h  splitted_configurations.mesh  splitted_configurations_compl.mesh
legacy/: marchingcube.cpp  marchingcube.h
lib/: intersections.h  locale_iterative_smoother.cpp  locale_iterative_smoother.h  marchingcube.cpp  marchingcube.h  projection.cpp  projection.h  quality.cpp  quality.h
meshes/: CAD0.mesh  CAD0.vtk  CAD2.mesh  fertility.mesh  kitten.geogram
smoother/: vertexBasedSmoothing.cpp  vertexBasedSmoothing.h
src/: gridgenerator.cpp  intersections.cpp  locale_iterative_smoother.cpp  locale_iterative_smoother.h  marchinghex_bimaterial.cpp  marchinghex_hexmeshing.cpp  mhexample.cpp
tmp/: intersections.cpp  intersections.h  marchingcube.h
ultimaille/ultimaille/io/: geogram.cpp
